// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/Gameqoo/Detail/lib/forms/ApproveIssueForm render 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={null}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
    style={
      Object {
        "padding": "16px 24px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    />
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
      justifyContent="center"
      pt={2}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={true}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Detail/lib/forms/ApproveIssueForm render other condition 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={
    Object {
      "caption": "caption",
      "textInfo": "info",
      "title": "title",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
    style={
      Object {
        "padding": "16px 24px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="h5"
        weight="medium"
      >
        title
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="caption"
        weight="normal"
      >
        info
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div
        className=""
        id="btnListMenuContent"
      >
        <NonNetwork
          className="undefined"
        />
        <div>
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="subtitle2"
            weight="bold"
          >
            label
          </Typography>
          <div>
            <Typography
              className=""
              color="inherit"
              inline={false}
              variant="caption"
              weight="normal"
            >
              desc
            </Typography>
          </div>
        </div>
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="caption"
        weight="normal"
      >
        caption
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
      justifyContent="center"
      pt={2}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Detail/lib/forms/ApproveIssueForm render with network type list 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={null}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
    style={
      Object {
        "padding": "16px 24px",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div
        className=""
        id="btnListMenuContent"
      >
        <NonNetwork
          className=""
        />
        <div>
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="subtitle2"
            weight="bold"
          >
            label
          </Typography>
          <div>
            <Typography
              className=""
              color="inherit"
              inline={false}
              variant="caption"
              weight="normal"
            >
              desc
            </Typography>
          </div>
        </div>
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
      justifyContent="center"
      pt={2}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Button
          disabled={true}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(Component)>
`;
